--- a/p3/argocd.yaml
+++ b/p3/argocd.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: my
+  name: redacted
   namespace: argocd
 spec:
   project: default
