--- a/p2/deployment.yaml
+++ b/p2/deployment.yaml
@@ -1,42 +1,71 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-deployment
-  namespace: app-namespace
+  name: app-2
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
-      app: myapp
+      app: app-2
   template:
     metadata:
       labels:
-        app: myapp
+        app: app-2
     spec:
       containers:
         - name: nginx
-          image: nginx:1.25
+          image: paulbouwer/hello-kubernetes:1.10
+          imagePullPolicy: IfNotPresent
+          env: 
+          - name: MESSAGE
+            value: "Hello from app one"
           ports:
-            - containerPort: 80
-          env:
-            - name: APP_MESSAGE
-              valueFrom:
-                configMapKeyRef:
-                  name: app-config
-                  key: APP_MESSAGE
-            - name: PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: app-secret
-                  key: PASSWORD
-          volumeMounts:
-            - name: html-volume
-              mountPath: /usr/share/nginx/html/index.html
-              subPath: index.html
-      volumes:
-        - name: html-volume
-          configMap:
-            name: app-config
-            items:
-              - key: APP_MESSAGE
-                path: index.html
+            - containerPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app-1
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app-1
+  template:
+    metadata:
+      labels:
+        app: app-1
+    spec:
+      containers:
+        - name: nginx
+          image: paulbouwer/hello-kubernetes:1.10
+          imagePullPolicy: IfNotPresent
+          env: 
+          - name: MESSAGE
+            value: "Hello from app one"
+          ports:
+            - containerPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app-3
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app-3
+  template:
+    metadata:
+      labels:
+        app: app-3
+    spec:
+      containers:
+        - name: nginx
+          image: paulbouwer/hello-kubernetes:1.10
+          imagePullPolicy: IfNotPresent
+          env: 
+          - name: MESSAGE
+            value: "Hello from app one"
+          ports:
+            - containerPort: 8080
