--- a/p2/ingress.yaml
+++ b/p2/ingress.yaml
@@ -1,19 +1,35 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app-ingress
-  namespace: app-namespace
-  annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+  name: app
 spec:
   rules:
-    - host: myapp.local
+    - host: app1.com
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: app-service
+                name: app-1
+                port:
+                  number: 80
+    - host: app2.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: app-2
+                port:
+                  number: 80
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: app-3
                 port:
                   number: 80
