--- a/p2/service.yaml
+++ b/p2/service.yaml
@@ -1,12 +1,32 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-service
-  namespace: app-namespace
+  name: app-1
 spec:
-  type: ClusterIP
   selector:
-    app: myapp
+    app: app-1
   ports:
     - port: 80
-      targetPort: 80
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-2
+spec:
+  selector:
+    app: app-2
+  ports:
+    - port: 80
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-3
+spec:
+  selector:
+    app: app-3
+  ports:
+    - port: 80
+      targetPort: 8080
