--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -26,22 +26,7 @@ Vagrant.configure("2") do |config|
     end
 
     # Install K3s server + kubectl
-    server.vm.provision "shell", inline: <<-SHELL
-      curl -sfL https://get.k3s.io | sh -
-      while true; do
-        if [ -f "/var/lib/rancher/k3s/server/node-token" ];then
-          sudo cat /var/lib/rancher/k3s/server/node-token > /vagrant/token
-          break
-        else
-          sleep 1
-          echo "waiting the token to be created"
-        fi
-      
-      done
-      echo "alias k='kubectl'" >> /home/vagrant/.bashrc
-      chown vagrant:vagrant /home/vagrant/.bashrc
-      sudo chmod 777 /etc/rancher/k3s/k3s.yaml
-    SHELL
+    server.vm.provision "shell", path: "./scripts/install_k3s_server.sh"
   end
 
 
@@ -56,12 +41,7 @@ Vagrant.configure("2") do |config|
     end
 
     # Install K3s agent
-    worker.vm.provision "shell", inline: <<-SHELL
-      # Wait for server to be ready
-      # sleep 15
-      SERVER_TOKEN=$(cat /vagrant/token)
-      curl -sfL https://get.k3s.io | K3S_URL="https://192.168.56.110:6443" K3S_TOKEN="$SERVER_TOKEN" sh -
-    SHELL
+    worker.vm.provision "shell", path: "./scripts/install_k3s_agent.sh"
   end
 
 end
