--- a/p2/deployment.yaml
+++ b/p2/deployment.yaml
@@ -18,7 +18,7 @@ spec:
           imagePullPolicy: IfNotPresent
           env: 
           - name: MESSAGE
-            value: "Hello from app one"
+            value: "Hello from app two"
           ports:
             - containerPort: 8080
 ---
@@ -66,6 +66,6 @@ spec:
           imagePullPolicy: IfNotPresent
           env: 
           - name: MESSAGE
-            value: "Hello from app one"
+            value: "Hello from app three"
           ports:
             - containerPort: 8080
