push the changes

--- a/p3/confs/argocd.yaml
+++ b/p3/confs/argocd.yaml
@@ -4,6 +4,7 @@ metadata:
   name: redacted
   namespace: argocd
 spec:
+  project: default
   source:
     repoURL: https://github.com/Abdo-ox/ajari.git
     targetRevision: main
