--- a/bonus/confs/argocd.yaml
+++ b/bonus/confs/argocd.yaml
@@ -4,6 +4,7 @@ metadata:
   name: redacted
   namespace: argocd
 spec:
+  project: default
   source:
     repoURL: http://gitlab-webservice-default.gitlab.svc:80/root/my.git
     targetRevision: main
