--- a/p2/service.yaml
+++ b/p2/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-1
+  name: serve-1
 spec:
   selector:
     app: app-1
@@ -12,7 +12,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-2
+  name: serve-2
 spec:
   selector:
     app: app-2
@@ -23,7 +23,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-3
+  name: serve-3
 spec:
   selector:
     app: app-3
