--- a/p2/ingress.yaml
+++ b/p2/ingress.yaml
@@ -11,7 +11,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: app-1
+                name: serve-1
                 port:
                   number: 80
     - host: app2.com
@@ -21,7 +21,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: app-2
+                name: serve-2
                 port:
                   number: 80
     - http:
@@ -30,6 +30,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: app-3
+                name: serve-3
                 port:
                   number: 80
